Fix: overflows (ugly code to refractor)

--- a/app/src/style.css
+++ b/app/src/style.css
@@ -62,6 +62,9 @@
 .flex-wrap{
     flex-wrap: wrap;
 }
+.flex-no-wrap{
+    flex-wrap: nowrap;
+}
 
 .navtab{
     background-color: var(--light-grey);
